# rustaf

./: .gitignore  Cargo.toml  LICENSE  README.md  rustaf_config.toml.sample
migrations/2021-01-10-071749_create_messages/: up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
