[package]
name = "rustaf"
description = "YuzuRyo61's Rust artifact"
version = "1.0.0"
authors = ["YuzuRyo61 <yuzuryo61@yuzulia.work>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/YuzuRyo61/rustaf"
license = "MIT"
license-file = "LICENSE"
keywords = ["Artifact", "Web", "API"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
actix-web = "3.3.2"
actix-rt = "1.1.1"
